classDiagram
%% ============ DOMAIN ============
class Bus {
    +BusId: string
    +BatteryCapacity: double
    +Consumption: double
    +Model: BusModel              %% nyt felt
}

class BusModel {
    <<enumeration>>
    MBeCitaro
    YutongE12
    BYDK9
    Volvo7900E
}

%% ============ FILE IO ============
class FileHelper {
    +SaveBusesAsync(buses: IEnumerable~Bus~): Task
    +LoadBusesAsync(): Task<List~Bus~>
}

%% ============ PRESENTATION (MVVM) ============
class BusListViewModel {
    -fileHelper: FileHelper
    +Buses: ObservableCollection~Bus~
    +AddCommand(): void
    +EditCommand(): void
    +DeleteCommand(): void
    +Reload(): Task
}

class AddEditBusViewModel {
    -fileHelper: FileHelper
    +Bus: Bus
    +SaveCommand(): Task
    +CancelCommand(): void
    +IsNew: bool
}

class MainViewModel {
    -fileHelper: FileHelper
    +BusListVM: BusListViewModel
    +InitializeAsync(): Task
}

%% ============ RELATIONS ============
BusListViewModel  ..> FileHelper : uses
AddEditBusViewModel ..> FileHelper : uses
MainViewModel ..> FileHelper : uses
BusListViewModel  --> Bus        : shows list
AddEditBusViewModel --> Bus      : edits/creates
Bus --> BusModel                 : has
